--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,14 @@
     </exclusion>
 </exclusions>
 </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>18.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
-        </dependencies>
+    </dependencies>
 
 <build>
 <plugins>
