--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 Server.port = 1312
 
-spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.open-in-view=false
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.datasource.url=jdbc:mysql://localhost:3306/weather_forecast?useSSL=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.allow-bean-definition-overriding=true
-spring.jpa.show-sql = true
-
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 
