--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.open-in-view=false
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://localhost:3306/weather_forecast?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/forecast?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.show-sql=true
