--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ Server.port = 1312
 
 
 spring.jpa.open-in-view=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=your username
+spring.datasource.password=your password
 
 spring.datasource.url=jdbc:mysql://localhost:3306/forecast?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
